--- a/stayles.css
+++ b/stayles.css
@@ -15,6 +15,11 @@ body {
     background-color: whitesmoke;
     padding: 20px 80px;
     height: 100px;
+    z-index: 999;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 #header img {
     width: 100px;
@@ -34,9 +39,50 @@ body {
     font-size: 16px;
     font-weight: 600;
     transition: 0.3s ease;
-    position: relative;
 }
 #navbar li a:hover {
     color: green;
 }
 
+
+/* Hero */
+#hero {
+    background-image: url("img/hero4.png");
+    height: 90vh;
+    width: 100%;
+    background-size: cover;
+    background-position: top 25% right 0;
+    padding:  0 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+#hero h4{
+    padding-bottom: 10px;
+    font-size: 26px;
+}
+#hero h2 {
+    font-size: 38px;
+}
+#hero h1 {
+    font-size: 38px;
+    color: green;
+}
+#hero p {
+    padding: 10px 0;
+}
+#hero button {
+    padding: 14px 24px;
+    background-color: rgb(68, 43, 12);
+    border: none;
+    font-size: 20px;
+    border-radius: 24px;
+    cursor: pointer;
+    color: white;
+    font-weight: 600;
+    transition: 0.3s ease;
+}
+#hero button:hover {
+    background-color: rgb(82, 55, 34);
+}
