--- a/stayles.css
+++ b/stayles.css
@@ -48,7 +48,7 @@ body {
 /* Hero */
 #hero {
     background-image: url("img/hero4.png");
-    height: 90vh;
+    height: 80vh;
     width: 100%;
     background-size: cover;
     background-position: top 25% right 0;
@@ -85,4 +85,52 @@ body {
 }
 #hero button:hover {
     background-color: rgb(82, 55, 34);
+}
+
+
+.p1-section {
+    padding: 40px 80px;
+}
+#feature {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+#feature .fe-box {
+    width: 180px;
+    padding: 25px 15px;
+    text-align: center;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+    border: solid 1px #cce7d0;
+    border-radius: 4px;
+    margin: 15px 0;
+    font-size: 22px;
+}
+#feature .fe-box:hover {
+    box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+}
+#feature .fe-box img {
+    width: 100%;
+    margin-bottom: 15px;
+}
+#feature .fe-box h6 {
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    background-color: lightcoral;
+    color: rgb(255, 255, 255);
+}
+#feature .fe-box:nth-child(2) h6 {
+    background-color: skyblue;
+}
+#feature .fe-box:nth-child(3) h6 {
+    background-color: pink;
+}
+#feature .fe-box:nth-child(4) h6 {
+    background-color: royalblue;
+}
+#feature .fe-box:nth-child(5) h6 {
+    background-color: plum;
 }
