--- a/stayles.css
+++ b/stayles.css
@@ -247,3 +247,46 @@ body {
         font-size: 0.9rem;
     }
 }
+
+/* Banner Section */
+#banner {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-image: url("img/b2.jpg");
+    width: 100%;
+    height: 35vh;
+    background-size: cover;
+    background-position: center;
+    color: white;
+
+}
+#banner h4 {
+    font-size: 16px;
+}
+#banner h2 {
+    font-size: 32px;
+    padding: 10px 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+#banner h2 span {
+    color: red;
+}
+#banner button  {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 14px 28px;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+    color: black;
+    background-color: whitesmoke;
+    cursor: pointer;
+}
+#banner button:hover {
+    background-color: green;
+    color: white;
+}
